# plug-and-hack

./: Cargo.toml  README.md  config.yaml
src/: lib.rs  main.rs
src/core/: attack_surface_model.rs  exploit_engine.rs  mod.rs  osint_provider.rs
src/engines/custom/: mod.rs  react2shell.rs
src/exploit/react/: mod.rs  react_unsafely_deserialize_rce.rs
src/frameworks/: metasploit.rs  mod.rs
src/models/: attack_surface.rs  mod.rs  query.rs  shodan.rs  target.rs
src/osint/: fofa.rs  mod.rs  shodan.rs  zoomeye.rs
src/osint/shodan/: mod.rs  shodan.rs  shodan_queries.rs
src/pipeline/: collector.rs  correlator.rs  executor.rs  mod.rs  modeler.rs
src/providers/: mod.rs
src/providers/shodan/: client.rs  mod.rs  queries.rs
src/providers/shodan_spider/: client.rs  mod.rs  queries.rs
src/utils/: config.rs  error.rs  mod.rs
