[package]
name = "plug-and-hack"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.25", features = ["json", "multipart"] }
tokio = {version = "1", features = ["full"]}
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
base64 = "0.22.1"
futures = "0.3.31"
rmpv = { version = "1.3.0", features = ["with-serde"] }
rmp-serde = "1.3.0"
rust-metasploit = "1.2.0"
serde_core = "1.0.228"
thiserror = "2.0.17"
async-trait = "0.1.89"
anyhow = "1.0.100"
config = "0.15.19"